--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Lettergame</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Main</string>
+    <string name="title_activity_main">Lettergame</string>
     <string name="btn_startgame_text">Start Game</string>
 
 </resources>
