--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Lettergame</string>
+    <string name="app_name">Minigames</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Lettergame</string>
     <string name="btn_startgame_text">Start Game</string>
