--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="submitScoreCancelString">Score niet opslaan</string>
     <string name="nextImageString">Volgende afbeelding</string>
     <string name="youLostString">Helaas geen highscore</string>
+     <string name="btn_play_again">Play Again</string>
+    <string name="menuItem_flipOrientation">Flip screen</string>
+    <string name="hello">Hello World, JJSPogoActivity!</string>
 
 </resources>
