Orientation based on device + black theme
Orientation is default in portrait, which suitable for most phones, but
it can detect tablets (by screensize), if a tablet is detected it will
use the landscape mode. If the detection is wrong it can still be
changed back via the menu.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="nextImageString">Volgende afbeelding</string>
     <string name="youLostString">Helaas geen highscore</string>
      <string name="btn_play_again">Play Again</string>
-    <string name="menuItem_flipOrientation">Flip screen</string>
+    <string name="menuItem_flipOrientation">Tablet modus</string>
     <string name="hello">Hello World, JJSPogoActivity!</string>
 
 </resources>
